tests/NormalTests/paczka1/fuzzy1/38109926.err
Error in line 9: A201 A201 27,2
Error in line 10: A201 S95 54,5
Error in line 5: 4Fs A316 45,3
Error in line 2: LwdaW A316 90,6
Error in line 13: LwdaW A201 22,0
Error in line 15: LwdaW A540 79,5
Error in line 12: 4Fs A540 46,8
Error in line 26: 4Fs A316 -2,5
Error in line 25: 4Fs A316 50,1
Error in line 29: LwdaW A540 46,0
Error in line 34: gnL5 A540 0,2
Error in line 36: gnL5 S95 5,9
Error in line 35: LwdaW A540 14,4
